Improving loggs and gradle configuration